--- a/docs/0300-guides/200-load/106-load.mdx
+++ b/docs/0300-guides/200-load/106-load.mdx
@@ -11,7 +11,8 @@ You may use a different folder location for your incoming files by setting the `
 
 ```yaml title="metadata/application.sl.yml"
 application:
-  incoming: /path/to/incoming
+  area:
+    incoming: /path/to/incoming
 ```
 <br/>
 
@@ -24,7 +25,8 @@ incoming_path: /path/to/incoming
 
 ```yaml title="metadata/application.sl.yml"
 application:
-  incoming: {{incoming_path}}
+  area:
+    incoming: {{incoming_path}}
 ```
 
 
