--- a/docs/0300-guides/300-transform/100-tutorial.mdx
+++ b/docs/0300-guides/300-transform/100-tutorial.mdx
@@ -123,7 +123,7 @@ starlake transform --recursive --name kpi.order_summary
 Our database should now contain the following tables and data (amounts and dates may differ here):
 
 ```plaintext
-$ duckdb ./duckdb.db
+$ duckdb $SL_ROOT/datasets/duckdb.db
 v0.10.0 20b1486d11
 Enter ".help" for usage hints.
 D show;
