--- a/docs/0300-guides/200-load/105-autoload.mdx
+++ b/docs/0300-guides/200-load/105-autoload.mdx
@@ -35,11 +35,6 @@ Since we did not specify the target datawarehouse but the local filesystem as th
 In real life, the target datawarehouse will be a database and the tables will be created in the target database.
 
 ```plaintext title="table schemas inferred from the directory structure"
-incoming
-└── starbake
-    ├── product.xml
-    ├── order_20240228.csv
-    └── order_line_20240228.csv
 metadata/load
 └── starbake
     ├── _config.sl.yml
@@ -54,12 +49,50 @@ datasets/
 │   └── starbake    # in the  replay directory
 ├── stage           # files are moved to the stage directory before being loaded
 │   └── starbake
-└── unresolved      # files with names that do not match a valid pattern
-                    # are moved to the unresolved directory.
+├── unresolved      # filenames that do not match a valid pattern are moved to the unresolved directory.                    
+└──incoming
+    └── starbake
+        ├── product.xml
+        ├── order_20240228.csv
+        └── order_line_20240228.csv
 
 ```
 
 <br/>
+
+
+- The `_config.sl.yml` file is a configuration file that contains the domain configuration and describe how the domain will be created in the target database.
+
+- The `<table>.sl.yml` file contains the table configuration and describes how files are parsed, validated and loaded into the target database.
+
+
+
+## How autoload detects the format of the files
+
+- It expects the file to be named after the table it will be loaded into.
+- It uses the file extension to detect the format of the file. The supported formats are `csv`,`psv`,`dsv`, `json`, `xml`
+- It uses the first line of the file to detect the separator and the number of columns.
+- In the case of CSV files, it uses the first line of the file to detect the column names.
+- It uses the whole file content to detect the column types.
+- In the case of JSON file, it is a considered a JSON_ARRAY file if the first character is `[` and a JSON file if the first character is `{`.
+- In the case of XML file, it uses the first line of the file to detect the root element and the number of columns.
+
+XML files are expected to have the following structure:
+<br/>
+
+```xml
+<?xml> # optional xml declaration
+<myroot>
+    <myrecord attr1="value1" >
+        <column1>value1</column1>
+        <column2>value2</column2>
+        ...
+    </myrecord>
+<myroot>
+
+```
+
+## Spark specifics
 
 When running against Spark Locally, the tables are created in the `datasets` directory.
 When running against a real datawarehouse, the tables are created in the target database.
@@ -77,39 +110,3 @@ datasets/
 
 ````
 
-
-
-
-- The `_config.sl.yml` file is a configuration file that contains the domain configuration and describe how the domain will be created in the target database.
-
-- The `<table>.sl.yml` file contains the table configuration and describes how files are parsed, validated and loaded into the target database.
-
-
-## Query the loaded tables
-
-
-
-## How autoload detects the format of the files
-
-- It expects the file to be named after the table it will be loaded into.
-- It uses the file extension to detect the format of the file. The supported formats are `csv`,`psv`,`dsv`, `json`, `xml`
-- It uses the first line of the file to detect the separator and the number of columns.
-- In the case of CSV files, it uses the first line of the file to detect the column names.
-- It uses the whole file content to detect the column types.
-- In the case of JSON file, if is a considered a JSON_ARRAY file if the first character is `[` and a JSON file if the first character is `{`.
-- In the case of XML file, it uses the first line of the file to detect the root element and the number of columns.
-
-XML files are expected to have the following structure:
-<br/>
-
-```xml
-<?xml> # optional xml declaration
-<root>
-    <row attr1="value1" >
-        <column1>value1</column1>
-        <column2>value2</column2>
-        ...
-    </row>
-<root>
-
-```
