remove mdx extension

--- a/blog/2024-08-29-introducing-starlake-ai.mdx
+++ b/blog/2024-08-29-introducing-starlake-ai.mdx
@@ -1,5 +1,5 @@
 ---
-slug: introducing-starlake-ai.mdx
+slug: introducing-starlake-ai
 title: Introducing Starlake.ai
 author: Abdelhamide El Arib
 author_title: Starlake Core Team
