Improve  seo for intro and install

--- a/blog/2024-05-14-declarative.mdx
+++ b/blog/2024-05-14-declarative.mdx
@@ -111,4 +111,10 @@ Join our community on [GitHub](https://github.com/starlake-ai/starlake)
 
 P.S. Please star the repository: https://github.com/starlake-ai/starlake. Also, any issue or enhancement with Starlake, please just report it. It will fall under the scope of gracious care taking of course.
 
+---
+title: "Declarative Data Pipelines: The Future of ETL with Starlake"
+description: "Learn how declarative programming is revolutionizing data engineering. See how Starlake.ai simplifies ETL and data transformation."
+keywords: ["ETL", "data pipeline", "declarative programming", "data engineering"]
+---
+
 
