--- a/docs/010.install.mdx
+++ b/docs/010.install.mdx
@@ -1,170 +1,223 @@
-# Installation
+# Quick Installation Guide
 
-## Starlake CLI
+Get started with Starlake in minutes. Choose your preferred installation method below.
 
+## Installation Methods
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
+<Tabs groupId="installation-methods">
+<TabItem value="docker" label="🐳 Docker (Recommended)">
 
-## Prerequisites
+### Prerequisites
+- Docker installed and running
+- No other dependencies required - everything is included in the container
 
-Make sure you have Java 11+ installed on your machine.
+### Installation
 
-You can check your Java version by typing `java -version` in a terminal.
+The fastest way to get started with Starlake:
 
-If you don't have Java 11+ installed, you can download it from
-[Oracle JDK](https://www.oracle.com/java/technologies/javase-jdk11-downloads.html) or [OpenJDK](https://adoptopenjdk.net/)
+```bash
+# Pull the latest stable image
+docker pull starlakeai/starlake:latest
 
+# Verify installation
+docker run -it starlakeai/starlake:latest help
+```
 
-## Install Starlake
-To install starlake, you need to download the setup script from github.
-The script will in turn download required dependencies and copy them to the bin subdirectory.
+<details>
+<summary>Custom Build Instructions</summary>
 
-<Tabs groupId="platforms">
-<TabItem value="linux_macos" label="Linux/MacOS">
+Build a specific version or branch:
 
-```shell
-sh <(curl https://raw.githubusercontent.com/starlake-ai/starlake/master/distrib/setup.sh)
+```bash
+# Clone repository
+git clone git@github.com:starlake-ai/starlake.git
+cd starlake
+
+# Build with specific version
+docker build -t starlakeai/starlake:VERSION \
+    --build-arg SL_VERSION=1.2.0 .
+```
+
+</details>
+
+### Running Starlake with Docker
+
+<Tabs groupId="docker-usage">
+<TabItem value="basic" label="Basic Usage">
+
+```bash
+# Mount current directory and run Starlake
+docker run -it \
+    -v $(pwd):/starlake \
+    starlakeai/starlake:latest <command>
+
+# Example: Run help command
+docker run -it \
+    -v $(pwd):/starlake \
+    starlakeai/starlake:latest help
 ```
 
 </TabItem>
 
-<TabItem value="windows" label="Windows">
+<TabItem value="aws" label="AWS Integration">
+
+```bash
+# Run with AWS credentials
+docker run -it \
+    -v $(pwd):/starlake \
+    -e SL_ROOT=/starlake \
+    -e AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
+    -e AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
+    -e AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN \
+    -e AWS_REGION=$AWS_REGION \
+    starlakeai/starlake:latest <command>
+```
+
+</TabItem>
+
+<TabItem value="gcp" label="GCP Integration">
+
+```bash
+# Run with GCP credentials
+docker run -it \
+    -v $(pwd):/starlake \
+    -v $HOME/.config/gcloud:/root/.config/gcloud \
+    -e SL_ROOT=/starlake \
+    -e GOOGLE_APPLICATION_CREDENTIALS=/root/.config/gcloud/application_default_credentials.json \
+    starlakeai/starlake:latest <command>
+```
+
+</TabItem>
+
+<TabItem value="azure" label="Azure Integration">
+
+```bash
+# Run with Azure credentials
+docker run -it \
+    -v $(pwd):/starlake \
+    -e SL_ROOT=/starlake \
+    -e AZURE_TENANT_ID=$AZURE_TENANT_ID \
+    -e AZURE_CLIENT_ID=$AZURE_CLIENT_ID \
+    -e AZURE_CLIENT_SECRET=$AZURE_CLIENT_SECRET \
+    starlakeai/starlake:latest <command>
+```
+
+</TabItem>
+
+<TabItem value="advanced" label="Advanced Options">
+
+```bash
+# Run with custom configuration
+docker run -it \
+    -v $(pwd):/starlake \
+    -e SL_ROOT=/starlake \
+    -e SL_ENV=production \
+    -e SL_METRICS_ACTIVE=true \
+    -e JAVA_OPTS="-Xmx4g" \
+    -e SPARK_DRIVER_MEMORY=4g \
+    starlakeai/starlake:latest <command>
+```
+
+Common environment variables:
+- `SL_ROOT`: Project root directory inside container
+- `SL_ENV`: Environment (dev, test, prod)
+- `SL_METRICS_ACTIVE`: Enable/disable metrics collection
+- `JAVA_OPTS`: JVM options
+- `SPARK_DRIVER_MEMORY`: Spark driver memory allocation
+
+</TabItem>
+</Tabs>
+
+:::tip Mount Points
+Always mount your project directory to `/starlake` in the container to ensure proper file access.
+:::
+
+:::note Cloud Credentials
+For production environments, consider using mounted credential files or secret management services instead of environment variables.
+:::
+
+</TabItem>
+
+<TabItem value="linux_macos" label="🖥️ Linux/MacOS">
+
+### Prerequisites
+- Java 11+ installed
+  ```bash
+  # Verify Java version
+  java -version
+  ```
+- If needed, install Java from [Oracle JDK](https://www.oracle.com/java/technologies/javase-jdk11-downloads.html) or [OpenJDK](https://adoptopenjdk.net/)
+
+### Installation
+
+One-line installation script:
+
+```bash
+sh <(curl https://raw.githubusercontent.com/starlake-ai/starlake/master/distrib/setup.sh)
+```
+
+The script will create the following directory structure:
+```text
+starlake/
+├── bin/
+│   ├── deps/      # Extra dependencies (e.g., Oracle client)
+│   ├── sl         # Starlake CLI
+│   └── spark      # Embedded Spark runtime
+```
+
+</TabItem>
+
+<TabItem value="windows" label="🪟 Windows">
+
+### Prerequisites
+- Java 11+ installed
+  ```powershell
+  # Verify Java version
+  java -version
+  ```
+- PowerShell 5.0 or later
+- Administrator privileges
+
+### Installation
+
+Run in PowerShell as administrator:
 
 ```powershell
 Invoke-Expression (Invoke-WebRequest -Uri "https://raw.githubusercontent.com/starlake-ai/starlake/master/distrib/setup.ps1").Content
 ```
 
 </TabItem>
-
-<TabItem value="docker" label="Docker">
-
-Pull the docker image from the [docker hub](https://hub.docker.com/repository/docker/starlakeai/starlake/tags?page=1&ordering=last_updated)
-
-```shell
-$ docker pull starlakeai/starlake:VERSION
-```
-You may also run Starlake from a docker container. To do so, download this [Dockerfile](https://github.com/starlake-ai/starlake/blob/master/distrib/Dockerfile)
-and build your docker image
-	
-```shell
-$ git clone git@github.com:starlake-ai/starlake.git
-$ cd starlake
-$ docker build -t starlakeai/starlake  .
-$ docker run -it starlakeai/starlake:VERSION help
-
-```
-
-To build the docker image with a specific version of Starlake or a specific branch, you can use the following command:
-
-```sh
-$ docker build -t starlakeai/starlake:VERSION --build-arg SL_VERSION=1.2.0 .
-```
-
-To execute the docker image, you can use the following command:
-
-```shell
-
-$ docker run -it -v /path/to/starlake/project:/starlake starlakeai/starlake:VERSION <command>
-
-```
-
-Note that you can pass environment variables to the docker image to configure the CLI. For example, to run against AWS redshift, you can pass the following environment variables:
-
-```shell
-
-$ SL_ROOT="s3a://my-bucket/my-starlake-project-base-dir/"
-$ docker run -e SL_ROOT=$SL_ROOT \
-    -e AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
-    -e AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
-    -e AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN \
-    -e REDSHIFT_PASSWORD=$REDSHIFT_PASSWORD \
-    -it starlakeai/starlake:VERSION <command>
-
-```
-
-</TabItem>
 </Tabs>
 
+## Development Tools
 
+### VS Code Extension
 
-The following folders should now have been created and contain Starlake dependencies.
+### Prerequisites
+- Visual Studio Code installed
+- GraphViz (required for pipeline visualization)
 
-
-```text
-
-starlake
-└── bin
-    ├── deps
-    ├── sl
-    └── spark
-
-```
-
-:::note
-
-Any extra library you may need (Oracle client for example) need to be copied in the bin/deps folder.
-
-:::
-
-Starlake is now installed with all its dependencies. You can run the CLI by typing `starlake`.
-
-
-This will display the commands supported by the CLI.
-
-
-```
-Starlake Version 1.2.0
-Usage:
-	starlake [command]
-Available commands =>
-	lineage
-	bootstrap
-	bq2yml or bq-info
-	compare
-	cnxload
-	esload
-	extract-data
-	extract-schema
-	import
-	infer-schema
-	kafkaload
-	load
-	metrics
-	parquet2csv
-	transform
-	watch
-	xls2yml
-	yml2ddl
-	table-dependencies
-	yml2xls
-```
-
-
-That's it! We now need to [bootstrap a new project](guides/bootstrap).
-
-## Graph Visualization
-
-Starlake provides features to visualize the lineage of a table,
-the relationship between tables, and table level and row level acess policies.
-
-To use these features, you need to install the [GraphViz](https://graphviz.org/download/) on top of which the starlake graph generator is built.
-
-
+Install GraphViz based on your platform:
 
 <Tabs groupId="graphviz">
 <TabItem value="linux" label="Linux">
 
-```shell
-sudo [apt|yum] install graphviz
+```bash
+# Debian/Ubuntu
+sudo apt install graphviz
+
+# RHEL/CentOS
+sudo yum install graphviz
 ```
 
 </TabItem>
 
 <TabItem value="macos" label="MacOS">
 
-```shell
+```bash
 brew install graphviz
 ```
 
@@ -172,20 +225,80 @@ brew install graphviz
 
 <TabItem value="windows" label="Windows">
 
-Download and install one of the packages from [GraphViz](https://graphviz.org/download/#windows).
+Download the installer from [GraphViz Official Website](https://graphviz.org/download/#windows)
 
 </TabItem>
 
 <TabItem value="docker" label="Docker">
 
-GraphViz comes pre-installed with the starlake docker image.
+GraphViz comes pre-installed in the Starlake Docker image.
 
 </TabItem>
 </Tabs>
 
+### Installation
 
+Enhance your development experience with our official VS Code extension:
 
-## VS Code extension
+1. Open VS Code
+2. Go to Extensions (Ctrl+Shift+X)
+3. Search for "Starlake"
+4. Install "Starlake Data Pipeline Tools"
 
-Starlake comes with a vs-code plugin that allows you to interact with the Starlake CLI.
-You can install it from the [vs-code marketplace](https://marketplace.visualstudio.com/items?itemName=starlake.starlake).
+Features:
+- Syntax highlighting for Starlake configurations
+- Schema validation
+- SQL transformation snippets
+- Pipeline visualization
+
+## Verify Installation
+
+Test your installation:
+
+```bash
+starlake --version
+```
+
+You should see output like:
+```
+Starlake Version 1.2.0
+```
+
+## Next Steps
+
+- [Create your first project](guides/bootstrap)
+- [Load your first dataset](guides/load/tutorial)
+- [Transform your data](guides/transform/tutorial)
+
+## Troubleshooting
+
+Common installation issues and solutions:
+
+1. **Java Version Mismatch**
+   ```bash
+   # Check Java version
+   java -version
+
+   # Install correct version if needed
+   ```
+
+2. **Permission Issues**
+   ```bash
+   # Fix permissions on Linux/MacOS
+   chmod +x bin/sl
+   ```
+
+3. **Docker Issues**
+   ```bash
+   # Verify Docker installation
+   docker --version
+
+   # Test Docker permissions
+   docker run hello-world
+   ```
+
+:::note Extra Dependencies
+
+Any additional libraries (e.g., Oracle client) should be copied to the `bin/deps` folder.
+
+:::
