--- a/docs/0010.quickstart.mdx
+++ b/docs/0010.quickstart.mdx
@@ -1,4 +1,13 @@
-# Quick Installation Guide
+---
+id: quickstart
+title: "Quick Start Guide: Install & Setup Starlake"
+sidebar_label: "Quick Start"
+sidebar_position: 2
+description: "Get started with Starlake in minutes. Step-by-step installation guide for Docker, Linux, MacOS, and Windows with cloud integration examples."
+keywords: [starlake installation, data pipeline setup, etl quickstart, docker etl, cloud integration]
+---
+
+# Quick Start Guide
 
 Get started with Starlake in minutes. Choose your preferred installation method below.
 
