--- a/docs/0300-guides/100-extract/100-tutorial.mdx
+++ b/docs/0300-guides/100-extract/100-tutorial.mdx
@@ -1,3 +1,11 @@
+---
+id: extract-tutorial
+title: "Data Extraction Tutorial: Getting Started with Starlake"
+sidebar_label: "Quick Start Guide"
+description: "Learn how to extract data from databases and files using Starlake. Step-by-step tutorial for beginners with examples and best practices."
+keywords: [data extraction, etl tutorial, database extraction, starlake tutorial, data pipeline]
+---
+
 # Tutorial
 
 Extract tables in one shot or incrementally from a database as a set of files.
