--- a/docs/010.install.mdx
+++ b/docs/010.install.mdx
@@ -275,7 +275,7 @@ Starlake Version 1.2.0
 
 ## Next Steps
 
-- [Create your first project](guides/bootstrap)
+- [Create your first project](guides/getting-started-project-setup)
 - [Load your first dataset](guides/load/tutorial)
 - [Transform your data](guides/transform/tutorial)
 
