--- a/docs/0300-guides/300-transform/100-tutorial.mdx
+++ b/docs/0300-guides/300-transform/100-tutorial.mdx
@@ -104,7 +104,7 @@ kpi.order_summary
     starbake.order_line
 ```
 
-If you installed the [GraphViz tool](../../install#graph-visualization), you can produce the same graph in svg or png format using the following command:
+If you installed the [GraphViz tool](../../quickstart#prerequisites-3), you can produce the same graph in svg or png format using the following command:
 
 ```bash
 
