--- a/blog/2024-07-05-how-to-unit-test-your-sql-data-pipelines.mdx
+++ b/blog/2024-07-05-how-to-unit-test-your-sql-data-pipelines.mdx
@@ -27,7 +27,7 @@ Mastering your data pipeline is a challenging art. A data pipeline generally con
 - **Ingestion:** Loading the extracted data into the data warehouse
 - **Transformation:** A phase that ultimately adds value to the collected data
 
-The table below summarizes the tests run by Starlake on [Load](https://starlake.ai/starlake/docs/next/category/load) & [Transform](https://starlake.ai/starlake/docs/next/category/transform) jobs:
+The table below summarizes the tests run by Starlake on [Load](https://docs.starlake.ai/category/load) & [Transform](https://docs.starlake.ai/category/transform) jobs:
 
 | Check to run on                                                                                                                                           | Ingestion Test | Transform Test |
 | --------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------- | -------------- |
