--- a/docs/0300-guides/200-load/105-autoload.mdx
+++ b/docs/0300-guides/200-load/105-autoload.mdx
@@ -98,7 +98,7 @@ When running against a real datawarehouse, the tables are created in the target 
 
 ```shell title="Extra files when running autoload against spark locally"
 datasets/
-├── starbake.db     # files are loaded as tables into the starbake domain
+├── starbake.db     # files are loaded as tables into the starbake schema
 │   ├── order
 │   ├── order_line
 │   └── product
