--- a/blog/2024-12-19-bigquery-wildcard-tables.mdx
+++ b/blog/2024-12-19-bigquery-wildcard-tables.mdx
@@ -151,7 +151,7 @@ tags: [Data Engineering, Analytics, Wildcards tables, BigQuery]
 
     ```sql
     SELECT * FROM sales.transactions_*
-    WHERE _TABLE_SUFFIX = "US_CA" AND trans_date = '2024-12-19'
+    WHERE _TABLE_SUFFIX = 'US_CA' AND trans_date = '2024-12-19'
     ```
 
     ```sql
