--- a/blog/2022-02-15-rls-cls-big-query.mdx
+++ b/blog/2022-02-15-rls-cls-big-query.mdx
@@ -17,7 +17,7 @@ Historically, to restrict access on specific columns or rows in BigQuery, one ca
 
 ![CLS / RLS using Views]( /img/blog/cls-rls-bigquery/cls-rls.png "CLS / RLS using Views")
 
-
+{/* truncate */}
 BigQuery **Views** require to grant access for the end users to the table on top of which the view is created. To bypass that limitation,
 BigQuery provide **Authorized views**. However, Authorized views come with the following restrictions:
 
