--- a/blog/2024-05-14-declarative.mdx
+++ b/blog/2024-05-14-declarative.mdx
@@ -22,6 +22,8 @@ This is the story of how a small team of developers crafted a platform that goes
 
 ![Starlake](/img/starlake-draw.png)
 
+{/* truncate */}
+
 ## The Genesis
 
 Back in 2015, at the helm of ebiznext, a boutique data engineering company, we faced a daunting challenge. Our client, a prominent entity in need of a robust big data solution, sought to harness the power of Hadoop and Spark. Despite our modest size (20 people), we dared to compete against industry giants with tenfold resources (100.000+ headcount).
