--- a/blog/2024-05-28-polars-vs-spark.mdx
+++ b/blog/2024-05-28-polars-vs-spark.mdx
@@ -25,6 +25,7 @@ However, on a daily basis, I also need to develop on my laptop and test my work 
 
 What about my fellow data scientist colleagues? They need to run their workload on production data through their favorite notebook environment.
 
+{/* truncate */}
 
 This post addresses the following points:
 
