--- a/blog/2024-07-05-how-to-unit-test-your-sql-data-pipelines.mdx
+++ b/blog/2024-07-05-how-to-unit-test-your-sql-data-pipelines.mdx
@@ -20,6 +20,8 @@ The path to rigorous data testing comes with its own set of challenges. In this 
 
 ![]( /img/blog/how-to-unit-test-your-sql-data-pipelines/data-pipeline-cicd.gif)
 
+{/* truncate */}
+
 ## The art of mastering data pipelines
 
 Mastering your data pipeline is a challenging art. A data pipeline generally contains the following phases:
