--- a/blog/2024-12-16-incremental-models-the-easy-way.mdx
+++ b/blog/2024-12-16-incremental-models-the-easy-way.mdx
@@ -19,6 +19,8 @@ This is a significant benefit of it being an integrated declarative data stack.
 Not only does it use the same YAML DSL for both loading and transforming activities, 
 but it also leverages the backfill capabilities of your target orchestrator.
 
+{/* truncate */}
+
 When running transformations, we encounter two cases:
 
 ### Full-refresh
