--- a/blog/2024-12-19-bigquery-wildcard-tables.mdx
+++ b/blog/2024-12-19-bigquery-wildcard-tables.mdx
@@ -21,6 +21,7 @@ tags: [Data Engineering, Analytics, Wildcards tables, BigQuery]
     In this example, we demonstrate how Starlake simplifies the process by seamlessly 
     loading your data into wildcard tables.
 
+{/* truncate */}
 
     ## The Problem
 
