--- a/blog/2025-01-08-introducing-starlake-ai.mdx
+++ b/blog/2025-01-08-introducing-starlake-ai.mdx
@@ -20,7 +20,7 @@ In the modern data landscape, businesses often face these challenges:
 - Lack of robust governance and data quality assurance
 
 Starlake tackles these problems head-on, offering a declarative data pipeline solution that simplifies the entire data lifecycle.
-
+{/* truncate */}
 ---
 
 ## **Our Mission**
