add UI installation instructions and image to blog article

--- a/docs/010.install.mdx
+++ b/docs/010.install.mdx
@@ -9,7 +9,8 @@ keywords: [starlake installation, data pipeline setup, etl quickstart, docker et
 
 # Quick Start Guide
 
-Get started with Starlake in minutes. Choose your preferred installation method below.
+Get started with Starlake in minutes. Choose your preferred installation method below or our advanced UI.
+To install Starlake with the advanced user interface, follow the [Starlake UI Installation Guide](https://github.com/starlake-ai/starlake-docker).
 
 ## Installation Methods
 
