use authors file

--- a/blog/2024-07-05-how-to-unit-test-your-sql-data-pipelines.mdx
+++ b/blog/2024-07-05-how-to-unit-test-your-sql-data-pipelines.mdx
@@ -1,10 +1,8 @@
 ---
 slug: how-unit-test-your-sql-data-pipelines
 title: How to unit test your data pipelines
-author: Bounkong Khamphousone
-author_title: Starlake Core Team
-author_url: https://www.linkedin.com/in/bounkong/
-author_image_url: https://2.gravatar.com/avatar/82db9f824c7cc18bd7b7e091c5752353c869752d8ff5bac90e8770de89635cf9
+authors:
+    - tiboun
 tags: [Unit Test, Databricks, DuckDB, Data Engineering, Analytics, BigQuery, Snowflake, Redshift]
 ---
 
