--- a/blog/2024-12-19-bigquery-wildcard-tables.mdx
+++ b/blog/2024-12-19-bigquery-wildcard-tables.mdx
@@ -1,10 +1,8 @@
 ---
 slug: bigquery-wildcard-tables
 title: How to Load and Transform into BigQuery Wildcard Tables
-author: Hayssam Saleh
-author_title: Starlake Core Team
-author_url: https://www.linkedin.com/in/hayssams/
-author_image_url: https://s.gravatar.com/avatar/04aa2a859a66b52787bcba8c36beba8c.png
+authors:
+    - hayssams
 tags: [Data Engineering, Analytics, Wildcards tables, BigQuery]
 ---
 
