--- a/blog/2021-09-18-bonjour.md
+++ b/blog/2021-09-18-bonjour.md
@@ -1,10 +1,8 @@
 ---
 slug: bonjour
 title: Bonjour
-author: Starlake Team
-author_title: Starlake Core Team
-author_url: https://github.com/starlake-ai
-author_image_url: https://avatars.githubusercontent.com/u/89859410?s=200&v=4
+authors:
+    - hayssams
 tags: [bonjour, Starlake]
 ---
 
