--- a/blog/2021-12-15-spark-big-query-partitioning.mdx
+++ b/blog/2021-12-15-spark-big-query-partitioning.mdx
@@ -1,10 +1,8 @@
 ---
 slug: spark-big-query-partitioning
 title: Handling Dynamic Partitioning and Merge with Spark on BigQuery
-author: Hayssam Saleh
-author_title: Starlake Core Team Member
-author_url: https://www.linkedin.com/in/hayssams/
-author_image_url: https://s.gravatar.com/avatar/04aa2a859a66b52787bcba8c36beba8c.png
+authors:
+    - hayssams
 tags: [Spark, BigQuery, Dataproc, Google Cloud, ETL, Starlake]
 ---
 
