--- a/blog/2022-02-15-rls-cls-big-query.mdx
+++ b/blog/2022-02-15-rls-cls-big-query.mdx
@@ -1,10 +1,8 @@
 ---
 slug: rls-cls-big-query
 title: Column  and Row Level Security in BigQuery
-author: Hayssam Saleh
-author_title: Starlake Core Team Member
-author_url: https://www.linkedin.com/in/hayssams/
-author_image_url: https://s.gravatar.com/avatar/04aa2a859a66b52787bcba8c36beba8c.png
+authors:
+    - hayssams
 tags: [Spark, BigQuery, Dataproc, Google Cloud, ETL, Starlake]
 ---
 
