--- a/blog/2024-05-14-declarative.mdx
+++ b/blog/2024-05-14-declarative.mdx
@@ -1,10 +1,8 @@
 ---
 slug: starlake-oss
 title: Starlake OSS - Bringing Declarative Programming to Data Engineering and Analytics
-author: Hayssam Saleh
-author_title: Starlake Core Team
-author_url: https://www.linkedin.com/in/hayssams/
-author_image_url: https://s.gravatar.com/avatar/04aa2a859a66b52787bcba8c36beba8c.png
+authors:
+    - hayssams
 tags: [Starlake, Data Engineering, Analytics]
 ---
 
