--- a/blog/2024-05-28-polars-vs-spark.mdx
+++ b/blog/2024-05-28-polars-vs-spark.mdx
@@ -1,10 +1,8 @@
 ---
 slug: polars-vs-spark
 title: Polars versus Spark
-author: Hayssam Saleh
-author_title: Starlake Core Team
-author_url: https://www.linkedin.com/in/hayssams/
-author_image_url: https://s.gravatar.com/avatar/04aa2a859a66b52787bcba8c36beba8c.png
+authors:
+    - hayssams
 tags: [Polars, Spark, Databricks, Data Engineering, Analytics]
 ---
 
