--- a/blog/2024-12-16-incremental-models-the-easy-way.mdx
+++ b/blog/2024-12-16-incremental-models-the-easy-way.mdx
@@ -1,10 +1,8 @@
 ---
 slug: incremental-models-the-easy-way
 title: Incremental models, the easy way.
-author: Hayssam Saleh
-author_title: Starlake Core Team
-author_url: https://www.linkedin.com/in/hayssams/
-author_image_url: https://s.gravatar.com/avatar/04aa2a859a66b52787bcba8c36beba8c.png
+authors:
+    - hayssams
 tags: [Data Engineering, Analytics, Incremental Models, Data Orchestration, Backfill, Catchup]
 ---
 
