--- a/docs/0300-guides/200-load/100-tutorial.mdx
+++ b/docs/0300-guides/200-load/100-tutorial.mdx
@@ -97,6 +97,7 @@ $
 ## Manual load
 
 The autoload command above is a shortcut to the infer-schema, stage and load commands below.
+If you used the autoload command, you can skip this section.
 
 ### Infer schema
 This is done by running the following command:
